Barely started modifying theme

--- a/sites/all/themes/exchange/style.css
+++ b/sites/all/themes/exchange/style.css
@@ -150,7 +150,7 @@ dl {
 }
 
 header#top {
-  background:#333739 url(images/header-bg.png) 0 0 repeat-x;
+  background:#333739 url(images/header_desktop_bkrd.gif) 0 0 repeat-x;
   border-top:1px solid #545b5d;
   border-bottom:1px solid #232627;
 	padding:24px 0;
