--- a/sites/all/themes/exchange/style.css
+++ b/sites/all/themes/exchange/style.css
@@ -24,7 +24,7 @@ body.pattern5 {background-image:url(images/pattern5.png);}
 	position:relative;
 }
 
-article{margin-top:60px;}
+article{margin:60px 0;}
 
 @media (max-width:1025px){
 	#page {
@@ -157,6 +157,7 @@ dl {
 #sidebar{margin-top:120px;}
 .subnav{}
 #sidebar .subnav li{list-style:none; list-style-image:none; margin-bottom:10px;}
+#right_sidebar{float:right; background:#bbb; padding-bottom:30000px; margin-bottom:-30000px;}
 
 .region-content{width:85%;}
 
@@ -934,7 +935,7 @@ nav ul {
 }
 
 #main {
-	overflow: visible !important;	
+	overflow: hidden;
 }
 
 
