--- a/sites/all/themes/exchange/theme.css
+++ b/sites/all/themes/exchange/theme.css
@@ -189,7 +189,13 @@ li a.active, #sidebar .subnav li a:hover{color:#fff; text-decoration:none;}
 
 /* Members area */
 .field-name-field-member-image .field-label{display:none;}
-.field-name-field-member-image .field-items img, .field-name-field-gallery-image img{float:left; margin:0 15px 15px 0;}
+/*
+.field-name-field-gallery-image .field-items{display:inline-block;float:left;}
+*/
+.field-name-field-gallery-image .field-item{display:inline-block; margin: 0 15px 15px 0;}
+/*
+.field-name-field-member-image .field-item, .field-name-field-gallery-image img{display:inline-block;float:left; margin:0 15px 15px 0;}
+*/
 .field-name-field-publications, .caption{padding:10px 18px; background:#3B3B3B;}
 .field-name-field-publications p, .caption p{font-size:0.8em; line-height:1.3em;}
 
@@ -199,6 +205,7 @@ li a.active, #sidebar .subnav li a:hover{color:#fff; text-decoration:none;}
 .form-item-search-block-form{font-size:.8em;}
 
 .region-content{width:92%;}
+.even, .odd{}
 
 /* ----- =Footer ----- */
 
@@ -236,6 +243,17 @@ footer .span4{width:300px;}
 div.footer_links{margin-right:0;}
 div.footer_logos img{margin-bottom:20px;}
 
+}
+
+@media (max-width: 767px) {
+	#right_sidebar img{margin:0 auto; display:block;}
+	.home_message{height:80px;}
+	.home_message p{margin:0; padding:0;}
+.home_message header{font-size:1.2em; padding-left:1em; margin:-5px 0 0 0;}
+.home_message .bigword, .home_message .smaller_words{display:inline;float:none; font-family:'AllerLightRegular'; color:#fff;}
+.home_message .bigword{font-size:1em; padding:0 .3em 0 0; margin-top:0;}
+.home_message .smaller_words{margin:0;}
+.home_message .smaller_words:last-child{margin-right:0px;}
 }
 
 /* ----- =Header ----- */
