--- a/sites/all/themes/exchange/theme.css
+++ b/sites/all/themes/exchange/theme.css
@@ -1145,8 +1145,7 @@ fieldset, fieldset.filter-wrapper {
 }
 
 #tabs li.active a, #tabs li a:hover {
-  background:#ffffff;
-  border-bottom-color:#ffffff;
+  background:#1F1F1F;
 }
 
 /* ----- =Tables ----- */
@@ -1509,7 +1508,7 @@ a.accordion-toggle:hover {
 .form-actions {
   padding:0;
   margin-bottom:30px;
-  background:#ffffff;
+  background:#1F1F1F;
   border:none;
 }
 
